--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
     <div class="wrap">
       <div class="widget">
           <div class="fecha">
-            <p id="diaSemana" class="diaSemana"></p>
-            <p id="dia" class="dia"></p>
+            <p id="diaSemana" class="diaSemana">Viernes</p>
+            <p id="dia" class="dia">06</p>
             <p>de </p>
-            <p id="mes" class="mes"></p>
+            <p id="mes" class="mes">Julio</p>
             <p>del </p>
-            <p id="year" class="year"></p>
+            <p id="year" class="year">2019</p>
           </div>
           <div class="reloj">
-            <p id="horas" class="horas"></p>
+            <p id="horas" class="horas">22</p>
             <p>:</p>
-            <p id="minutos" class="minutos"></p>
+            <p id="minutos" class="minutos">18</p>
             <p>:</p>
             <div class="caja_segundos">
-              <p id="ampm" class="ampm"></p>
-              <p id="segundos" class="segundos"></p>
+              <p id="ampm" class="ampm">Pm</p>
+              <p id="segundos" class="segundos">32</p>
             </div>
           </div>
       </div>
