--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p>:</p>
             <p id="minutos" class="minutos">18</p>
             <p>:</p>
-            <div class="caja_segundos">
+            <div class="caja-segundos">
               <p id="ampm" class="ampm">Pm</p>
               <p id="segundos" class="segundos">32</p>
             </div>
